# change-generator

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  Dockerfile  README.md  cg  main.c
include/: change.h
src/: change.c
tests/: CMakeLists.txt  cg_tests  tests.c
